Revert "layout: Move Theme color set to default.html"
This reverts commit 79ac73968d4779f01c04c6f7dabfb713caa89e0a.

- Page loading background is not showing!!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
 layout: "main"
 title: "OPNay's Lab"
+theme:
+    primary:
+        main: "#2196F3"
+        light: "#6ec6ff"
+        dark: "#0069c0"
 image_number: 6
 ---
 <section class="card center">
