--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 ---
 permalink: /404.html
-image_number: 4
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +10,7 @@ image_number: 4
         {% include html/jquery.html %}
 		<style>
 html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", "arial";}
-.body {background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
+.body {background:url("/image/404.jpg"); background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
 .body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:block; width:100%; height:100%;}
 .article {position:absolute; top:50%; width:100%; transform:translateY(-50%); text-align:center; color:white;}
 .article h1 {margin:0; font-size:4rem;}
@@ -23,10 +22,5 @@ html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", 
 			<h1>404 Error!</h1>
 			<p>Page was not found! :(</p>
 		</div>
-        <script>
-            (function($){
-                $('body').css('background-image', 'url("/image/404/' + ($.now() % {{ page.image_number }}) + '.jpg")');
-            })(jQuery);
-        </script>
 	</body>
 </html>
