app: Decrease list font size

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@ title: "Application"
 <section class="card">
     <div class="toolbar">
         <div class="back left">
-            <a href="/"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
+            <a href="javascript:window.history.back()"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
         </div>
         <div class="title left">
             <p>{{ page.title }}</p>
@@ -36,6 +36,6 @@ title: "Application"
     .toolbar .title p {line-height: 64px;}
     .list .item {display:block; padding:16px;}
     .list .item:hover {background:rgba(127,127,127,0.12); text-decoration:none;}
-    .list .title {margin:0 0 8px; font-size:1.4rem;}
+    .list .title {margin:0 0 8px; font-size:1rem;}
     .list .desc {font-size:0.8rem; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
 </style>
