css/default: Move '.card.center' style to default.css

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@ title: "OPNay's Lab"
 		{% endfor %}
 	</div>
     <style>
-        .card.center {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); text-align:center;}
-    
-        #profile {margin:0; width:320px;}
+        #profile {margin:0; width:320px; text-align:center;}
         #profile .block {padding:16px;}
         #profile .profile {display:block; margin:0 auto 16px; width:128px; height:128px; border-radius:50%;}
         #profile .name {margin-bottom:16px; font-size:32px;}
