posts, app: Use center class on default.css

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 layout: "base"
 title: "Application"
 ---
-<section class="card">
+<section class="card center">
     <div class="toolbar">
         <div class="back left">
             <a href="javascript:window.history.back()"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
@@ -26,7 +26,7 @@ title: "Application"
     $('body').ready(f); $(window).resize(f);
 </script>
 <style>
-    .card {position:absolute; top:50%; left:50%; max-width:738px; transform:translate(-50%, -50%); overflow:hidden;}
+    .card {max-width:738px; overflow:hidden;}
     .card.over {margin:16px 0; top:0; transform:translate(-50%, 0);}
     .mobile .card {max-width:calc(100% - 32px);}
     .toolbar::after {content:''; display:block; clear:both;}
