--- a/posts.html
+++ b/posts.html
@@ -12,7 +12,7 @@ title: "Posts"
             {% if psize == 0 %}
             <p>There's no Posts</p>
             {% else %}
-            <p>{{ page.title }}({{ site.posts | size }})</p>
+            <p>{{ page.title }}</p>
             {% endif %}
         </div>
     </div>
