--- a/posts.html
+++ b/posts.html
@@ -8,13 +8,7 @@ title: "Posts"
         <div class="back left">
             <a href="javascript:window.history.back()"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
         </div>
-        <div class="title left">
-            {% if psize == 0 %}
-            <p>There's no Posts</p>
-            {% else %}
-            <p>{{ page.title }}</p>
-            {% endif %}
-        </div>
+        <div class="title left">{% if psize == 0 %}There's no Posts{% else %}{{ page.title }}{% endif %}</div>
     </div>
     <section class="list">
         {% for post in site.posts %}
@@ -38,10 +32,9 @@ title: "Posts"
     .toolbar::after {content:''; display:block; clear:both;}
     .toolbar .back {padding:14px; width:64px; height:64px;}
     .toolbar .back a {display:block; padding:6px; width:32px; height:32px;}
-    .toolbar .title {width:calc(100% - 64px);}
-    .toolbar .title p {line-height: 64px;}
+    .toolbar .title {width:calc(100% - 64px); font-size:24px; line-height:64px;}
     .list .item {display:block; padding:16px;}
     .list .item:hover {background:rgba(127,127,127,0.12); text-decoration:none;}
-    .list .title {margin:0 0 8px; font-size:1rem;}
-    .list .desc {font-size:0.8rem; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
+    .list .title {margin:0 0 8px; font-size:18px;}
+    .list .desc {font-size:12px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
 </style>
