--- a/posts.html
+++ b/posts.html
@@ -1,40 +1,20 @@
 ---
-layout: "base"
+layout: "lists"
 title: "Posts"
+back: "/"
 ---
 {% assign psize = site.posts | size %}
-<section class="card center {% if psize == 0 %}empty{% endif %}">
-    <div class="toolbar">
-        <div class="back left">
-            <a href="javascript:window.history.back()"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
-        </div>
-        <div class="title left">{% if psize == 0 %}There's no Posts{% else %}{{ page.title }}{% endif %}</div>
-    </div>
-    <section class="list">
-        {% for post in site.posts %}
-        <a class="item ft-black" href="{{ post.url }}">
-            <h1 class="title">{{ post.title }}</h1>
-            <p class="desc ft-black-sec">{{ post.content | strip_html | xml_escape }}</p>
-        </a>
-        {% endfor %}
-    </section>
-</section>
-
+{% if psize == 0 %}
 <script>
-    var f = function () {$('.card').toggleClass('over', ((window.innerHeight - 32) < $('.card').height()));};
-    $('body').ready(f); $(window).resize(f);
+    (function($){ $(".card").addClass("empty").find(".toolbar .title").text("There's no Posts"); })(jQuery)
 </script>
-<style>
-    .card {max-width:738px; overflow:hidden;}
-    .card.over {margin:16px 0; top:0; transform:translate(-50%, 0);}
-    .card.empty {background:rgb(255, 180, 105);}
-    .mobile .card {max-width:calc(100% - 32px);}
-    .toolbar::after {content:''; display:block; clear:both;}
-    .toolbar .back {padding:14px; width:64px; height:64px;}
-    .toolbar .back a {display:block; padding:6px; width:36px; height:36px;}
-    .toolbar .title {width:calc(100% - 64px); font-size:24px; line-height:64px;}
-    .list .item {display:block; padding:16px;}
-    .list .item:hover {background:rgba(127,127,127,0.12); text-decoration:none;}
-    .list .title {margin:0 0 8px; font-size:18px;}
-    .list .desc {font-size:12px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
-</style>
+{% else %}
+<section class="list">
+    {% for post in site.posts %}
+    <a class="item ft-black" href="{{ post.url }}">
+        <h1 class="title">{{ post.title }}</h1>
+        <p class="desc ft-black-sec">{{ post.content | strip_html | xml_escape }}</p>
+    </a>
+    {% endfor %}
+</section>
+{% endif %}
