--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ title: "OPNay's Lab"
         #profile .profile {display:block; margin:0 auto 16px; width:128px; height:128px; border-radius:50%;}
         #profile .name {margin-bottom:16px; font-size:32px;}
         #profile .social {justify-content:space-around;}
+        #profile .social a {display:inline-block; border-radius:50%; padding:8px; width:40px; height:40px; overflow:hidden;}
+        #profile .social a:hover {background:#EEE;}
 
         #profile .link {display:block; padding:8px; text-align:left;}
         #profile .link:hover {background:#EEE; text-decoration:none;}
