--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ title: "OPNay's Lab"
         <img class="profile" src="/image/profile.png" />
         <div class="name">OPNay</div>
         <div class="social flex">
-            {% for social in site.data.social %}
+            {% for social in site.data.blog_social %}
             <a href="{{ social.href }}"><img width="24px" height="24px" src="data:image/svg+xml;base64,{{ social.icon }}" /></a>
             {% endfor %}
         </div>
     </div>
 	<div class="block vertical">
-		{% for menu in site.data.side_menu %}
+		{% for menu in site.data.blog_menu %}
 		<a class="link ft-black" href="{{ menu.href }}">
 			<img class="icon" src="{{ menu.icon }}" alt="{{ menu.name }}" />
 			<span class="title">{{ menu.name }}</span>
