test: Set layout 'blog'
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/test.html
+++ b/test.html
@@ -1,3 +1,7 @@
+---
+layout: 'blog'
+title: 'Test Page'
+---
 <head>
     <!--  the below title automatically pulls in the title from stackedit.io -->
       <meta charset="utf-8">
