Cleanup - Remove `meta http-equiv="Content-Type"`   - Don't use in html5, use `meta charset="utf-8"` - Remove "/" in single tag(like img, meta) - Remove `type="text/javascript"`   - The type attribute is unnecessary for JavaScript resources. - Add alt for img tag - Cleanup some wrong tags
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/app/clock/index.html
+++ b/app/clock/index.html
@@ -33,6 +33,6 @@ html, body, .content {margin:0; padding:0; width:100%; height:100%; font-family:
 			<span class="period">PM</span>
 		</div>
 		<a class="src" href="https://unsplash.com/?photo=ndN00KmbJ1c">Photo by Adam Kool</a>
-		<script type="text/javascript" async src="./js/clock.js"></script>
+		<script async src="./js/clock.js"></script>
 	</body>
 </html>
