--- a/error/404.html
+++ b/error/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", "arial";}
-.body {background:url("/image/404.jpg"); background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
+.body {background:url("/error/404.jpg"); background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
 .body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:block; width:100%; height:100%;}
 .article {position:absolute; top:50%; width:100%; transform:translateY(-50%); text-align:center; color:white;}
 .article h1 {margin:0; font-size:4rem;}
